Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-17382

[C++] open_dataset doesn't ignore BOM in csv file when header's with quotes

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 9.0.0
    • 10.0.0
    • C++

    Description

      Similar issues's been logged and fixed as https://issues.apache.org/jira/browse/ARROW-14644. But when the csv is with bom and the header's with quotes, such as

      "a","b" 

      as the first line in csv, it will get the first column's name "a" instead of a.

      Attachments

        Issue Links

          Activity

            People

              ZMZ91 ZMZ91
              ZMZ91 ZMZ91
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 2h 50m
                  2h 50m