ARROW-17382: [C++] open_dataset doesn't ignore BOM in csv file when header's with quotes (#13838)

Lead-authored-by: Zimo Zhang <zmz@yanhuangdata.com>
Co-authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>